--- a/index.html
+++ b/index.html
@@ -60,62 +60,82 @@
                 <div class="navbar-end">
                     <div class="inline-flex gap-4">
                         <img src="./assets/coin.png" alt="">
-                        <div class="stat-value text-xl text-[rgba(17,17,17,0.7)]">5500</div>
+                        <div id="main-balance" class="stat-value text-xl text-[rgba(17,17,17,0.7)]">5500</div>
                         <span class="stat-value text-xl text-[rgba(17,17,17,0.71)]">BDT</span>
                     </div>
                 </div>
             </div>
         </nav>
         <!-- banner section start -->
-        <div
-            class="flex justify-center gap-5 md:w-10/12 w-full mx-auto items-center md:my-20 ">
+        <div class="flex justify-center gap-5 md:w-10/12 w-full mx-auto items-center md:my-20 ">
             <div class="flex gap-5 items-center justify-center">
-                <button class="btn btn-success bg-[#B4F461] border-none outline-0 px-8 font-bold">Donation</button>
-                <button
-                    class="btn bg-transparent px-8 border border-solid border-[rgba(17,17,17,0.35)] font-bold">History</button>
+                <button id="donation-btn" class="btn bg-[#B4F461] border-none outline-0 px-8 font-bold">Donation</button>
+                <button id="History-btn"
+                    class="btn px-8 border border-solid border-[rgba(17,17,17,0.35)] font-bold">History</button>
             </div>
         </div>
-        <div class="main md:w-10/12 mx-auto">
+
+    </header>
+    <main>
+        <div id="main-content" class="main md:w-10/12 mx-auto">
             <div class="flex border border-solid border-[rgba(17,17,17,0.15)] p-8 rounded-3xl gap-8 justify-between">
                 <div class="flex-1">
                     <img class="w-full" src="./assets/noakhali.png" alt="">
                 </div>
                 <div class="flex-1">
-                    <div class= "flex flex-col justify-between">
-                        <div class="inline-flex gap-4 px-4 py-3 bg-gray-300 rounded-md w-36">
+                    <div class="flex flex-col justify-between">
+                        <div class="inline-flex gap-4 px-4 py-3 bg-gray-300 rounded-md w-1/4">
                             <img src="./assets/coin.png" alt="">
-                            <div class="stat-value text-xl text-[rgba(17,17,17,0.7)]">0</div>
+                            <div id="noakhali-text-field" class="stat-value text-xl text-[rgba(17,17,17,0.7)]">0</div>
                             <span class="stat-value text-xl text-[rgba(17,17,17,0.71)]">BDT</span>
                         </div>
                         <div class="flex flex-col justify-between md:pr-11">
                             <h3 class="text-3xl font-bold mt-3">Donate for Flood at Noakhali, Bangladesh</h3>
-                            <p class="text-wrap leading-8 md:pr-14 py-6"> The recent floods in Noakhali have caused significant damage to homes infrastructure.
+                            <p class="text-wrap leading-8 md:pr-14 py-6"> The recent floods in Noakhali have caused
+                                significant damage to homes infrastructure.
                                 Your donation will help provide essential supplies and to those affected by this
                                 disaster. Every contribution, big or small, makes difference. Please join us in
                                 supporting the relief efforts and making a positive impact on the lives of those in
                                 need.</p>
-                            <input class="w-full p-4  border border-solid border-gray-300 rounded my-7" type="text" name="" placeholder="Write Donation Amount" id="">
-                            <button class="w-full py-4 font-bold btn mt-5 bg-[#B4F461]">Donate Now</button>
+                            <input id="donate-noakhali-field"
+                                class="w-full p-4  border border-solid border-gray-300 rounded my-7" type="text" name=""
+                                placeholder="Write Donation Amount" id="">
+                            <button id="first-button"
+                                class="select-button w-full py-4 font-bold btn mt-5 bg-[#B4F461]">Donate Now</button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="flex border border-solid my-9 border-[rgba(17,17,17,0.15)] p-8 rounded-3xl gap-8 justify-between">
+            <div
+                class="flex border border-solid my-9 border-[rgba(17,17,17,0.15)] p-8 rounded-3xl gap-8 justify-between">
                 <div class="flex-1">
                     <img class="w-full" src="./assets/feni.png" alt="">
                 </div>
                 <div class=" flex-1">
-                    <div class= "flex flex-col justify-between">
-                        <div class="inline-flex gap-4 px-4 py-3 bg-gray-300 rounded-md w-36">
+                    <div class="flex flex-col justify-between">
+                        <div class="inline-flex gap-4 px-4 py-3 bg-gray-300 rounded-md w-1/4">
                             <img src="./assets/coin.png" alt="">
-                            <div class="stat-value text-xl text-[rgba(17,17,17,0.7)]">0</div>
+                            <div id="feni-text" class="stat-value text-xl text-[rgba(17,17,17,0.7)]">600</div>
                             <span class="stat-value text-xl text-[rgba(17,17,17,0.71)]">BDT</span>
                         </div>
-                        <div class="flex flex-col justify-between md:pr-11">
-                            <h3 class="text-3xl font-bold mt-3">Donate for Flood at Noakhali, Bangladesh</h3>
-                            <p class="text-wrap leading-8  py-6"> The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.</p>
-                            <input class="w-full p-4  border border-solid border-gray-300 rounded my-7" type="text" name="" placeholder="Write Donation Amount" id="">
-                            <button class="w-full py-4 font-bold btn mt-5 bg-[#B4F461]">Donate Now</button>
+                        <div class="flex flex-col md:pr-11">
+                            <div>
+                                <h3 class="text-3xl font-bold mt-3">Donate for Flood Relief in Feni,Bangladesh</h3>
+                                <p class="text-wrap leading-8  py-6"> The recent floods in Feni have devastated local
+                                    communities, leading to severe disruption and loss. Your generous donation will help
+                                    provide immediate aid, including food, clean water, and medical supplies, to those
+                                    affected by this calamity. Together, we can offer crucial support and help rebuild
+                                    lives in the aftermath of this disaster. Every contribution counts towards making a
+                                    real difference. Please consider donating today to assist those in urgent need.</p>
+                            </div>
+                            <div>
+                                <input id="donate-flood-refil"
+                                    class="w-full p-4  border border-solid border-gray-300 rounded my-7" type="text"
+                                    name="" placeholder="Write Donation Amount" id="">
+                                <button id="second-btn"
+                                    class="select-button w-full py-4 font-bold btn mt-5 bg-[#B4F461]">Donate
+                                    Now</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -125,42 +145,45 @@
                     <img class="w-full" src="./assets/quota-protest.png" alt="">
                 </div>
                 <div class="flex-1">
-                    <div class= "flex flex-col justify-between">
-                        <div class="inline-flex gap-4 px-4 py-3 bg-gray-300 rounded-md w-36">
+                    <div class="flex flex-col justify-between">
+                        <div class="inline-flex gap-4 px-4 py-3 bg-gray-300 rounded-md w-1/4">
                             <img src="./assets/coin.png" alt="">
-                            <div class="stat-value text-xl text-[rgba(17,17,17,0.7)]">0</div>
+                            <div id="quata-text" class="stat-value text-xl text-[rgba(17,17,17,0.7)]">2400</div>
                             <span class="stat-value text-xl text-[rgba(17,17,17,0.71)]">BDT</span>
                         </div>
                         <div class="flex flex-col justify-between md:pr-11">
-                            <h3 class="text-3xl font-bold mt-3">Donate for Flood at Noakhali, Bangladesh</h3>
-                            <p class="text-wrap leading-8 md:pr-14 py-6">The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.</p>
-                            <input class="w-full p-4  border border-solid border-gray-300 rounded my-7" type="text" name="" placeholder="Write Donation Amount" id="">
-                            <button class="w-full py-4 font-bold btn mt-5 bg-[#B4F461]">Donate Now</button>
+                            <div>
+                                <h3 class="text-3xl font-bold mt-3">Aid for Injured in the Quota Movement</h3>
+                                <p class="text-wrap leading-8  py-6"> The recent floods in Feni have devastated local
+                                    communities, leading to severe disruption and loss. Your generous donation will help
+                                    provide immediate aid, including food, clean water, and medical supplies, to those
+                                    affected by this calamity. Together, we can offer crucial support and help rebuild
+                                    lives in the aftermath of this disaster. Every contribution counts towards making a
+                                    real difference. Please consider donating today to assist those in urgent need.</p>
+                            </div>
+                            <div>
+                                <input id="donate-quota"
+                                    class="w-full p-4  border border-solid border-gray-300 rounded my-7" type="text"
+                                    name="" placeholder="Write Donation Amount" id="">
+                                <button id="third-btn"
+                                    class="select-button w-full py-4 font-bold btn mt-5 bg-[#B4F461]">Donate
+                                    Now</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </header>
-    <main>
-        <!-- <div class="main-card">
-            <div class="card bg-base-100 w-96 shadow-xl">
-                <figure>
-                    <img src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp" alt="Shoes" />
-                </figure>
-                <div class="card-body">
-                    <h2 class="card-title">Shoes!</h2>
-                    <p>If a dog chews shoes whose shoes does he choose?</p>
-                    <div class="card-actions justify-end">
-                        <button class="btn btn-primary">Buy Now</button>
-                    </div>
-                </div>
-            </div>
-        </div> -->
+        <!-- history section -->
+        <div id="history-content" class="history-container hidden">
+            <!-- <h2 class="font-bold text-5xl text-center">Hidden</h2> -->
+        </div>
     </main>
     <footer>
 
     </footer>
+    <script src="./js/utilites.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
