--- a/index.html
+++ b/index.html
@@ -32,42 +32,27 @@
         <nav class="bg-[#F9F7F3]">
             <div class="navbar md:w-10/12 w-full mx-auto leading-7 md:leading-[110px]">
                 <div class="navbar-start">
-                    <div class="dropdown md:hidden">
-                        <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                                stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M4 6h16M4 12h16M4 18h7" />
-                            </svg>
-                        </div>
-                        <ul tabindex="0"
-                            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                            <li><a>Homepage</a></li>
-                            <li><a>Portfolio</a></li>
-                            <li><a>About</a></li>
-                        </ul>
-                    </div>
                     <div>
-                        <button class="btn px-8 py-3 bg-[#B4F461]">Blog</button>
+                        <button id="nav-button" class="btn md:px-8 md:py-3 bg-[#B4F461]">Blog</button>
                     </div>
                 </div>
-                <div class="navbar-center">
-                    <div class="flex justify-center items-center gap-5 cursor-pointer">
-                        <img src="./assets/logo.png" alt="">
-                        <a class="text-xl">Donate Bangladesh</a>
+                <div class="navbar-center text-xs">
+                    <div class="flex items-center md:gap-5 justify-between cursor-pointer">
+                        <img class="" src="./assets/logo.png" alt="">
+                        <a class="md:text-xl text-xs md:flex hidden">Donate Bangladesh</a>
                     </div>
                 </div>
                 <div class="navbar-end">
-                    <div class="inline-flex gap-4">
-                        <img src="./assets/coin.png" alt="">
-                        <div id="main-balance" class="stat-value text-xl text-[rgba(17,17,17,0.7)]">5500</div>
-                        <span class="stat-value text-xl text-[rgba(17,17,17,0.71)]">BDT</span>
+                    <div class="inline-flex md:gap-4 gap-2 items-center">
+                        <img class="" src="./assets/coin.png" alt="">
+                        <div id="main-balance" class="stat-value md:text-xl text-xs text-[rgba(17,17,17,0.7)]">5500</div>
+                        <span class="stat-value md:text-xl text-xs text-[rgba(17,17,17,0.71)]">BDT</span>
                     </div>
                 </div>
             </div>
         </nav>
         <!-- banner section start -->
-        <div class="flex justify-center gap-5 md:w-10/12 w-full mx-auto items-center md:my-20 ">
+        <div id="hide-for-blog" class="flex justify-center gap-5 md:w-10/12 w-full mx-auto items-center md:my-20 my-10">
             <div class="flex gap-5 items-center justify-center">
                 <button id="donation-btn" class="btn bg-[#B4F461] border-none outline-0 px-8 font-bold">Donation</button>
                 <button id="History-btn"
@@ -76,21 +61,21 @@
         </div>
 
     </header>
-    <main>
+    <main id="main-hide-for-blog">
         <div id="main-content" class="main md:w-10/12 mx-auto">
-            <div class="flex border border-solid border-[rgba(17,17,17,0.15)] p-8 rounded-3xl gap-8 justify-between">
+            <div class="flex md:flex-row flex-col border border-solid border-[rgba(17,17,17,0.15)] p-8 rounded-3xl gap-8 justify-between">
                 <div class="flex-1">
                     <img class="w-full" src="./assets/noakhali.png" alt="">
                 </div>
                 <div class="flex-1">
                     <div class="flex flex-col justify-between">
-                        <div class="inline-flex gap-4 px-4 py-3 bg-gray-300 rounded-md w-1/4">
+                        <div class="inline-flex md:gap-4 gap-2 px-4 py-3 bg-gray-300 rounded-md md:w-1/4 w-2/4">
                             <img src="./assets/coin.png" alt="">
                             <div id="noakhali-text-field" class="stat-value text-xl text-[rgba(17,17,17,0.7)]">0</div>
                             <span class="stat-value text-xl text-[rgba(17,17,17,0.71)]">BDT</span>
                         </div>
                         <div class="flex flex-col justify-between md:pr-11">
-                            <h3 class="text-3xl font-bold mt-3">Donate for Flood at Noakhali, Bangladesh</h3>
+                            <h3 id="donate-noakhali" class="md:text-3xl text-lg font-bold mt-3">Donate for Flood at Noakhali, Bangladesh</h3>
                             <p class="text-wrap leading-8 md:pr-14 py-6"> The recent floods in Noakhali have caused
                                 significant damage to homes infrastructure.
                                 Your donation will help provide essential supplies and to those affected by this
@@ -107,20 +92,20 @@
                 </div>
             </div>
             <div
-                class="flex border border-solid my-9 border-[rgba(17,17,17,0.15)] p-8 rounded-3xl gap-8 justify-between">
+                class="flex md:flex-row flex-col border border-solid my-9 border-[rgba(17,17,17,0.15)] p-8 rounded-3xl gap-8 justify-between">
                 <div class="flex-1">
                     <img class="w-full" src="./assets/feni.png" alt="">
                 </div>
                 <div class=" flex-1">
                     <div class="flex flex-col justify-between">
-                        <div class="inline-flex gap-4 px-4 py-3 bg-gray-300 rounded-md w-1/4">
-                            <img src="./assets/coin.png" alt="">
-                            <div id="feni-text" class="stat-value text-xl text-[rgba(17,17,17,0.7)]">600</div>
-                            <span class="stat-value text-xl text-[rgba(17,17,17,0.71)]">BDT</span>
+                        <div class="inline-flex md:gap-4 gap-2 px-4 py-3 bg-gray-300 rounded-md md:w-1/4 w-2/4 items-center">
+                            <img class="w-full" src="./assets/coin.png" alt="">
+                            <div id="feni-text" class="stat-value md:text-xl text-[16px] text-[rgba(17,17,17,0.7)]">600</div>
+                            <span class="stat-value md:text-xl text-[16px] text-[rgba(17,17,17,0.71)]">BDT</span>
                         </div>
                         <div class="flex flex-col md:pr-11">
                             <div>
-                                <h3 class="text-3xl font-bold mt-3">Donate for Flood Relief in Feni,Bangladesh</h3>
+                                <h3 id="title-feni" class="md:text-3xl text-lg font-bold mt-3">Donate for Flood Relief in Feni,Bangladesh</h3>
                                 <p class="text-wrap leading-8  py-6"> The recent floods in Feni have devastated local
                                     communities, leading to severe disruption and loss. Your generous donation will help
                                     provide immediate aid, including food, clean water, and medical supplies, to those
@@ -140,20 +125,20 @@
                     </div>
                 </div>
             </div>
-            <div class="flex border border-solid border-[rgba(17,17,17,0.15)] p-8 rounded-3xl gap-8 justify-between">
+            <div class="flex md:flex-row flex-col border border-solid border-[rgba(17,17,17,0.15)] p-8 rounded-3xl gap-8 justify-between">
                 <div class="flex-1">
                     <img class="w-full" src="./assets/quota-protest.png" alt="">
                 </div>
                 <div class="flex-1">
                     <div class="flex flex-col justify-between">
-                        <div class="inline-flex gap-4 px-4 py-3 bg-gray-300 rounded-md w-1/4">
+                        <div class="inline-flex md:gap-4 gap-2 px-4 py-3 bg-gray-300 rounded-md md:w-1/4 w-2/4 items-center">
                             <img src="./assets/coin.png" alt="">
-                            <div id="quata-text" class="stat-value text-xl text-[rgba(17,17,17,0.7)]">2400</div>
-                            <span class="stat-value text-xl text-[rgba(17,17,17,0.71)]">BDT</span>
+                            <div id="quata-text" class="stat-value md:text-xl text-[16px] text-[rgba(17,17,17,0.7)]">400</div>
+                            <span class="stat-value md:text-xl text-[16px] text-[rgba(17,17,17,0.71)]">BDT</span>
                         </div>
                         <div class="flex flex-col justify-between md:pr-11">
                             <div>
-                                <h3 class="text-3xl font-bold mt-3">Aid for Injured in the Quota Movement</h3>
+                                <h3 id="title-quota" class="md:text-3xl text-lg font-bold mt-3">Aid for Injured in the Quota Movement</h3>
                                 <p class="text-wrap leading-8  py-6"> The recent floods in Feni have devastated local
                                     communities, leading to severe disruption and loss. Your generous donation will help
                                     provide immediate aid, including food, clean water, and medical supplies, to those
@@ -184,6 +169,7 @@
     </footer>
     <script src="./js/utilites.js"></script>
     <script src="./js/index.js"></script>
+    <script src="./js/faq.js"></script>
 </body>
 
 </html>
