added backdrop filter blur

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 </head>
 
 <body class="font-lexend">
-    <header class="fixed w-full  backdrop-brightness-50 bg-white/70">
+    <header class="fixed w-full bg-transparent backdrop-blur-xl bg-white/3">
         <!-- navigation bar start -->
-        <nav class="bg-[#F9F7F3]">
+        <nav class="bg-[#F9F7F3] ">
             <div class="navbar md:w-10/12 w-full mx-auto leading-7 md:leading-[110px]">
                 <div class="navbar-start">
                     <div>
@@ -68,7 +68,7 @@
             <div
                 class="flex md:flex-row flex-col border border-solid border-[rgba(17,17,17,0.15)] p-8 rounded-3xl gap-8 justify-between">
                 <div class="flex-1">
-                    <img class="w-full" src="./assets/noakhali.png" alt="">
+                    <img class="w-full h-auto md:h-[500px] rounded-lg object-cover" src="./assets/noakhali.png" alt="">
                 </div>
                 <div class="flex-1">
                     <div class="flex flex-col justify-between">
@@ -110,7 +110,7 @@
             <div
                 class="flex md:flex-row flex-col border border-solid my-9 border-[rgba(17,17,17,0.15)] p-8 rounded-3xl gap-8 justify-between">
                 <div class="flex-1">
-                    <img class="w-full" src="./assets/feni.png" alt="">
+                    <img class="w-full h-auto md:h-[540px] rounded-lg object-cover" src="./assets/feni.png" alt="">
                 </div>
                 <div class=" flex-1">
                     <div class="flex flex-col justify-between">
@@ -160,7 +160,7 @@
             <div
                 class="flex md:flex-row flex-col border border-solid border-[rgba(17,17,17,0.15)] p-8 rounded-3xl gap-8 justify-between">
                 <div class="flex-1">
-                    <img class="w-full" src="./assets/quota-protest.png" alt="">
+                    <img class="w-full h-auto md:h-[530px] rounded-lg object-cover" src="./assets/quota-protest.png" alt="">
                 </div>
                 <div class="flex-1">
                     <div class="flex flex-col justify-between">
