all functionality added and project complete

--- a/home.html
+++ b/home.html
@@ -26,18 +26,18 @@
     </script>
 </head>
 
-<body>
+<body class="font-lexend min-h-screen flex flex-col justify-between">
     <nav class="bg-[#F9F7F3]">
         <div class="navbar md:w-10/12 w-full mx-auto leading-7 md:leading-[110px]">
             <div class="navbar-start">
                 <div>
-                    <button id="sec-btn" class="btn md:px-8 md:py-3 bg-[#B4F461]">Home</button>
+                    <button id="sec-btn" class="btn md:px-8 text-[15px] md:text-xl font-semibold bg-[#B4F461]">Home</button>
                 </div>
             </div>
             <div class="navbar-center text-xs">
                 <div class="flex items-center md:gap-5 justify-between cursor-pointer">
                     <img class="" src="./assets/logo.png" alt="">
-                    <a class="md:text-xl text-xs md:flex hidden">Donate Bangladesh</a>
+                    <a class="md:text-xl  md:flex hidden font-semibold">Donate Bangladesh</a>
                 </div>
             </div>
             <div class="navbar-end">
@@ -105,6 +105,9 @@
             </div>
         </div>
     </main>
+    <footer class="md:p-24 bg-[#F9F7F3] p-12 md:mt-12 mt-5">
+
+    </footer>
     <script src="./js/home.js"></script>
 </body>
 
