some text replace

--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
 </head>
 
 <body class="font-lexend min-h-screen flex flex-col justify-between">
-    <nav class="bg-[#F9F7F3]">
+    <nav class="bg-[#F9F7F3] bg-opacity-30">
         <div class="navbar md:w-10/12 w-full mx-auto leading-7 md:leading-[110px]">
             <div class="navbar-start">
                 <div>
