--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 </head>
 
 <body class="font-lexend min-h-screen flex flex-col justify-between">
-    <header class="fixed w-full bg-transparent backdrop-blur-xl bg-white/3">
+    <header class="fixed w-full bg-transparent backdrop-blur-xl bg-opacity-30">
         <!-- navigation bar start -->
-        <nav class="bg-[#F9F7F3] ">
+        <nav class="bg-[#F9F7F3] bg-opacity-30">
             <div class="navbar md:w-10/12 w-full mx-auto leading-7 md:leading-[110px]">
                 <div class="navbar-start">
                     <div>
